# autoresearch-invest

./: .gitignore  ADR_OPTIMIZATION_RESULTS.md  EXPERIMENT_LOG.md  OPTIMIZATION_SUMMARY.md  README.md  backtest.py  backtest_train.py  experiments.md  hybrid_sweep.py  hybrid_sweep_results.json  latest_signal_report.txt  latest_signals.json  optimization_log.md  prepare.py  program.md  pyproject.toml  results_train.json  scanner_state.json  signal_scanner.py  sizing_sweep.py  sizing_sweep_results.json  strategy.py  strategy_backup_BEST_1085.py  strategy_backup_adr_baseline.py  strategy_backup_best.py  strategy_backup_best_0255.py  strategy_backup_best_0342.py  strategy_backup_best_0802.py  strategy_backup_best_1085.py  strategy_backup_best_1948.py  strategy_backup_best_1957.py  strategy_backup_best_1962.py  strategy_backup_exp13_sharpe1085.py  strategy_backup_exp19_sharpe1097.py  strategy_backup_exp22_sharpe1107.py  strategy_backup_exp23_sharpe1116.py  strategy_backup_exp2_sharpe0726.py  strategy_backup_exp3_sharpe0845.py  strategy_backup_exp6_sharpe1003.py  strategy_backup_exp8_sharpe1022.py  (+2 more)
