[project]
name = "autoresearch-invest"
version = "0.1.0"
description = "Autonomous investment strategy optimizer"
requires-python = ">=3.10"
dependencies = [
    "yfinance>=0.2.36",
    "pandas>=2.0",
    "numpy>=1.24",
    "ta>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
